Stuck footer to bottom

--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@
   background-repeat: no-repeat;
   align-items: center;
 }
+#content {
+  min-height: 100vh;
+  font-size: 100px;
+}
 .about {
   width: 100vw;
   height: 800px;
