Changed some colors and added an emailjs contact form

--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -3,7 +3,7 @@ footer {
     justify-content: space-between;
     padding: 4px;
     height: 6vh;
-    background-color: aqua;
+    background-color: #CDCDCD;
     align-items: center;
 }
 .footer-links {
