--- a/src/components/header.css
+++ b/src/components/header.css
@@ -1,6 +1,6 @@
 header {
     padding: 1vh 2vw;
-    background-color: orange;
+    background-color: #CDCDCD;
     display: flex;
     justify-content: space-between;
 }
