--- a/src/App.css
+++ b/src/App.css
@@ -10,7 +10,7 @@
  }
 
 .background {
-  width: 100vw;
+  width: 100%;
   height: 500px;
   position: relative;
   top: 0;
@@ -20,6 +20,11 @@
   background-position: 0 -30px;
   background-repeat: no-repeat;
   align-items: center;
+}
+@media screen and (max-height: 600px) {
+  .background {
+    height: 300px;
+  }
 }
 #content {
   min-height: 100vh;
