--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -2,7 +2,7 @@ footer {
     display: flex;
     justify-content: space-between;
     padding: 4px;
-    height: 6vh;
+    height: 60px;
     background-color: #CDCDCD;
     align-items: center;
 }
@@ -11,8 +11,9 @@ footer {
 }
 
 .footer-links img {
-    width: 40px;
+    height: 30px;
 }
+
 .footer-links img:hover {
     /* shadow: 3px 3px 5px 2px rgb(0 0 0/40%); */
     filter: drop-shadow(gray 5px 5px 10px);
