--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -50,7 +50,8 @@ textarea {
     background-color: #0ea5e9;
     border-radius: 10px;
     width: 30%;
+    transition: 0.2s;
 }
 #sendbutton:hover {
-    background-color: #7dd3fc;
+    background-color: #387c9c;
 }
