--- a/src/components/footer.css
+++ b/src/components/footer.css
@@ -8,6 +8,7 @@ footer {
 }
 .footer-links {
     display: flex;
+    transition: all 0.1s ease-in-out
 }
 
 .footer-links img {
@@ -18,4 +19,5 @@ footer {
     /* shadow: 3px 3px 5px 2px rgb(0 0 0/40%); */
     filter: drop-shadow(gray 5px 5px 10px);
     scale: 120%;
+    transition: 0.1s ease-in-out;
 }
