--- a/src/components/ContactForm.css
+++ b/src/components/ContactForm.css
@@ -5,6 +5,8 @@
 
 .formtext {
     margin: 3px auto;
+    padding: 5px;
+    border-radius: 5px;
 }
 form {
     display: grid;
@@ -30,9 +32,9 @@ textarea{
 
     background-color: white;
     color: black;
-    margin: 0;
-    padding: 0;
+    padding: 5px;
     box-sizing: border-box;
+    border-radius: 5px;
 }
 input{
     width: 100%;
