--- a/src/sections/sections.css
+++ b/src/sections/sections.css
@@ -1,6 +1,7 @@
 .section {
     margin:  20px 10px;
-    border: 2px solid gray;
-    box-shadow: 4px 4px 4px gray;
     border-radius: 10px;
+}
+h1 {
+    text-align: center;
 }
