--- a/src/components/PriceCard.css
+++ b/src/components/PriceCard.css
@@ -4,10 +4,11 @@
     margin-bottom: 5px;
     border: 1px solid black;
     border-radius: 5px;
-    margin-right: 10px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 1080px) {
     .priceCard {
         width: 40%;
     }
