--- a/src/components/PriceCard.css
+++ b/src/components/PriceCard.css
@@ -1,20 +1,48 @@
 .priceCard {
     width: 30%;
     padding: 16px;
-    margin-bottom: 5px;
+    position: relative;
+    margin-bottom: 20px;
     border: 1px solid black;
     border-radius: 5px;
     margin-left: 5px;
     margin-right: 5px;
 }
 
+.desc {
+    text-align: center;
+    margin-bottom: 45px;
+}
+
+.cardButton {
+    position: absolute;
+    bottom: 16px;
+    margin-left: 30%;
+    margin-right: 30%;
+    left: 0;
+    right: 0;
+}
+
+
+
 @media screen and (max-width: 1080px) {
     .priceCard {
         width: 40%;
     }
+    .cardButton {
+        margin-left: 25%;
+        margin-right: 25%;
+    }
 }
+
 @media screen and (max-width: 768px) {
     .priceCard {
         width: 100%;
+        
+    }
+
+    .cardButton {
+        margin-left: 35%;
+        margin-right: 35%;
     }
 }
