--- a/src/sections/sections.css
+++ b/src/sections/sections.css
@@ -8,8 +8,14 @@
     flex-wrap: wrap; 
     justify-content: center;
 }
-h1 {
+h1, h4 {
     text-align: center;
+}
+#lessonImage {
+    display: block; 
+    height: 400px; 
+    margin: 4px 50px; 
+    border-radius: 50px 
 }
 #me {
     display: block;
@@ -24,6 +30,10 @@ h1 {
 #aboutSection {
     width: 70%;
 }
+#lessonDiv {
+    display: flex;
+    margin-bottom: 10px;
+}
 @media screen and (max-width: 968px) {
     #aboutSection {
         width: 100%;
@@ -37,5 +47,15 @@ h1 {
     #me {
         margin-left: auto;
         margin-right: auto;
+    }
+}
+@media screen and (max-width: 768px) {
+    #lessonImage {
+        margin-left: auto;
+        margin-right: auto;
+        height: 300px;
+    }
+    #lessonDiv {
+        flex-wrap: wrap-reverse;
     }
 }
