--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap');
+
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  /* font-family: 'Lora', serif !important; */
   line-height: 1.5;
   font-weight: 400;
 
@@ -27,7 +29,8 @@ body {
   display: flex;
   min-width: 320px;
   min-height: 100vh;
-  color: black
+  color: black;
+  font-family: "Lora", serif !important;
 }
 
 h1 {
