--- a/src/App.css
+++ b/src/App.css
@@ -11,15 +11,29 @@
 
 .background {
   width: 100%;
-  height: 600px;
+  height: 500px;
   position: relative;
   top: 0;
-  left: 0;
-  background-image: url('https://images.pexels.com/photos/45243/saxophone-music-gold-gloss-45243.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); 
+  left: 0; 
   background-size: cover;
   background-position: 0 -30px;
   background-repeat: no-repeat;
   align-items: center;
+}
+#motionh2 {
+  color: black; 
+  /* margin-left: 15%; 
+  margin-right: 15%;  */
+  padding: 10px;
+  font-size: 60px;
+  text-align: left;
+  margin-left: 5%;
+  margin-right: 10%;
+}
+#saximg {
+  width: 600px;
+  margin-right: 5%;
+  border-radius: 50px;
 }
 @media screen and (max-height: 600px) {
   .background {
@@ -35,12 +49,14 @@
   height: 800px;
 }
 #button {
-  position: absolute;
-  bottom: 50px;
+  /* position: absolute; */
+  /* bottom: 50px; */
   margin-left: 30%;
   margin-right: 30%;
+  width: 40%;
   left: 0;
   right: 0;
+  margin-top: 50px;
 }
 #sections {
   padding: 4px;
