--- a/src/sections/sections.css
+++ b/src/sections/sections.css
@@ -36,6 +36,9 @@ h1, h4 {
 }
 #aboutSection {
     width: 70%;
+    display: flex;
+    line-height: 1.6;
+    flex-direction: column;
 }
 #lessonDiv {
     display: flex;
